--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -1,2 +1,2 @@
-LoadModule headers_module apache_modules/mod_headers.so
+LoadModule headers_module modules/mod_headers.so
 Header set Link: <css/app.css>;rel=stylesheet
