--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "author": "John Doe",
   "devDependencies": {
-    "lineman": "~0.29.3"
+    "lineman": "^0.36.3"
   },
   "scripts": {
     "start": "lineman run",
