--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "description": "An HTML/JS/CSS app",
   "version": "0.0.1",
   "private": true,
-  "author": "John Doe",
-  "devDependencies": {
-    "lineman": "^0.36.3"
-  },
+  "author": "Jason Karns",
   "scripts": {
     "start": "lineman run",
     "test": "lineman spec-ci"
+  },
+  "engines": {
+    "node": ">=0.10.36"
+  },
+  "devDependencies": {
+    "lineman": "^0.36.3"
   }
 }
