--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nosource",
-  "description": "An HTML/JS/CSS app",
+  "description": "An site without source!",
   "version": "0.0.1",
   "private": true,
   "author": "Jason Karns",
