Remove deploy script since no longer using static CLI to deploy

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "start": "lineman run",
     "test": "lineman spec-ci",
-    "prepare": "lineman build",
-    "predeploy": "npm install",
-    "deploy": "heroku static:deploy"
+    "prepare": "lineman build"
   },
   "engines": {
     "node": ">=0.10.36"
